--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 </head>
 
 <body>
-<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="a33cd178-d31d-4ebf-bdc5-6273eac25377";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>  <!-- ======= Header ======= -->
+
+  <!-- ======= Header ======= -->
    <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
@@ -41,10 +42,9 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="https://main--tapang.netlify.app/index.html#about">About</a></li>
+                 <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
-          <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -64,22 +64,21 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="https://wa.wizard.id/f25a5e">Contact</a></li>
+          <li><a class="nav-link scrollto" href="kontak/index.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Wa</a>
+      
 
     </div>
   </header>
-  <a href="https://wa.wizard.id/f25a5e"><img class="wa" src="assets/img/wa.png" alt=""> </a>
+  <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas."><img class="wa" src="assets/img/wa.png" alt=""> </a>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><br><span>INDOMONTIR</span> </h1>
       <p class="mb-4 pb-0">Service mobil panggilan Jakarta Bekasi Bogor Tangerang.</p>
-      <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
-      <a href="https://wa.wizard.id/f25a5e" class="about-btn scrollto">konsultasi gratis</a>
+      <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas." class="about-btn scrollto">konsultasi gratis</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -99,7 +98,7 @@
           </div>
           <div class="col-lg-3">
             <h3>buka jam berapa</h3>
-            <p>senin - jumat<br>24jam</p>
+            <p>setiap hari<br>24jam</p>
           </div>
         </div>
       </div>
@@ -118,8 +117,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="100">
               <img src="assets/img/gallery/4.jpg" alt="Speaker 1" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Pengecekan kondisi mesin</a></h3>
-                <p>Biasanya pengecekkan ini di lakukan di awal service</p>
+                <h3><a href="speaker-details.html">perbaikan mazada cx7</a></h3>
               </div>
             </div>
           </div>
@@ -127,8 +125,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="200">
               <img src="assets/img/gallery/8.jpg" alt="Speaker 2" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Persiapan perkakas montir</a></h3>
-                <p>Persiapan ini dilakukan untuk memastikan peralatan</p>
+                <h3><a href="speaker-details.html">Perbaikan bmw 730Li</a></h3>
               </div>
             </div>
           </div>
@@ -136,8 +133,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Proses pelepasan mesin</a></h3>
-                <p>Proses ini di lakukan pada saat service besar</p>
+                <h3><a href="speaker-details.html">overhoul civic fd</a></h3>
               </div>
             </div>
           </div>
@@ -145,8 +141,7 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/gallery/4122.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Proses Service</a></h3>
-                <p>Proses ini dimana montir melakukan service</p>
+                <h3><a href="speaker-details.html">perbaikan mercy 203</a></h3>
              </div>
             </div>
           </div>
@@ -154,17 +149,15 @@
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
               <img src="assets/img/12.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Pengecekan ecu</a></h3>
-                <p>Untuk mengecek kerusakan yang terdeteksi pada ecu</p>
+                <h3><a href="speaker-details.html">scaning program</a></h3>
              </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6">
             <div class="speaker" data-aos="fade-up" data-aos-delay="300">
-              <img src="assets/img/31.jpg" alt="Speaker 3" class="img-fluid">
+              <img style="height: 240px; width: 450px;" src="assets/img/gallery/9.jpg" alt="Speaker 3" class="img-fluid">
               <div class="details">
-                <h3><a href="speaker-details.html">Montir pulang</a></h3>
-                <p>Montir pulang karena sudah selesai</p>
+                <h3><a href="speaker-details.html">Service immobilizer</a></h3>
              </div>
             </div>
           </div>
@@ -270,17 +263,17 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Gallery</h2>
-          <p>Here are some photos of us working</p>
+          <p>Check our gallery from the recent events</p>
         </div>
       </div>
 
       <div class="gallery-slider swiper">
         <div class="swiper-wrapper align-items-center">
           <div class="swiper-slide"><a href="assets/img/gallery/1.jpg" class="gallery-lightbox"><img src="assets/img/gallery/1.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/mesin-mobil.jpg" class="gallery-lightbox"><img src="assets/img/gallery/mesin-mobil.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/ford-mustang-service.jpg" class="gallery-lightbox"><img src="assets/img/gallery/ford-mustang-service.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/2.jpg" class="gallery-lightbox"><img src="assets/img/gallery/2.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/3.jpg" class="gallery-lightbox"><img src="assets/img/gallery/3.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/4.jpg" class="gallery-lightbox"><img src="assets/img/gallery/4.jpg" class="img-fluid" alt=""></a></div>
-          <div class="swiper-slide"><a href="assets/img/gallery/perkabelan-mobil.jpg" class="gallery-lightbox"><img src="assets/img/gallery/perkabelan-mobil.jpg" class="img-fluid" alt=""></a></div>
+          <div class="swiper-slide"><a href="assets/img/gallery/5.jpg" class="gallery-lightbox"><img src="assets/img/gallery/5.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/6.jpg" class="gallery-lightbox"><img src="assets/img/gallery/6.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/7.jpg" class="gallery-lightbox"><img src="assets/img/gallery/7.jpg" class="img-fluid" alt=""></a></div>
           <div class="swiper-slide"><a href="assets/img/gallery/8.jpg" class="gallery-lightbox"><img src="assets/img/gallery/8.jpg" class="img-fluid" alt=""></a></div>
@@ -304,15 +297,16 @@
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_10-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">PENGECEKAN</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">PENGECEKAN</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">RUTIN</P2>
+        
           </div>
 
           <div class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_11-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359;font-weight: bold;">SERVICE</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f;font-weight: bold;">SERVICE</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">STEERING</P2>
           </div>
 
@@ -320,7 +314,7 @@
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_19-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">TUNE UP</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">TUNE UP</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">MESIN</P2>
           </div>
 
@@ -328,39 +322,39 @@
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_2-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">SERVICE</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">SERVICE</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">KELISTRIKAN</P2>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div style="margin-top: 50px;" class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_24-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">SERVICE</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">SERVICE</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">KAKI-KAKI</P2>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div style="margin-top: 50px;" class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_31-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">SERVICE</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">SERVICE</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">PENGEREMAN</P2>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div style="margin-top: 50px;" class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_36-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">MOBIL</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">MOBIL</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">MOGOK</P2>
           </div>
 
-          <div class="col-lg-3 col-md-4 col-xs-6">
+          <div style="margin-top: 50px;" class="col-lg-3 col-md-4 col-xs-6">
             <div class="supporter-logo">
               <img src="assets/img/lgo/icon_34-min.png" class="img-fluid" alt="">
             </div>
-            <h1 style="display: flex; justify-content: center; color: #ffd359; font-weight: bold;">GANTI</h1>
+            <h1 style="display: flex; justify-content: center; color: #ff4f4f; font-weight: bold;">GANTI</h1>
             <P2  style="display: flex; justify-content: center; font-weight: bold; color: #000000">OLI</P2>
           </div>
 
