--- a/blog.html
+++ b/blog.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="a33cd178-d31d-4ebf-bdc5-6273eac25377";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
@@ -42,9 +42,8 @@
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
          <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html">About</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">About</a></li>
           <li><a class="nav-link scrollto" href="index.html">Service</a></li>
-          <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="index.htmls">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -64,11 +63,10 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="https://wa.wizard.id/f25a5e">Contact</a></li>
+          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Wa</a>
 
     </div>
   </header><!-- End Header -->
@@ -90,18 +88,46 @@
 
           <div class="col-md-6">
             <div class="details">
-              <h2>CARA MERAWAT AC MOBIL AGAR TETAP DINGIN DAN EFISIEN</h2>
+              <h2>Bengkel mobil panggilan <span style="color: rgb(0, 0, 0);">24</span> <svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 512 512"><!--! Font Awesome Free 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><style>svg{fill:#f72424}</style><path d="M464 256A208 208 0 1 1 48 256a208 208 0 1 1 416 0zM0 256a256 256 0 1 0 512 0A256 256 0 1 0 0 256zM232 120V256c0 8 4 15.5 10.7 20l96 64c11 7.4 25.9 4.4 33.3-6.7s4.4-25.9-6.7-33.3L280 243.2V120c0-13.3-10.7-24-24-24s-24 10.7-24 24z"/></svg></h2>
               <div class="social">
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
               </div>
-              <p>Pada musim panas yang terik, AC mobil menjadi penyelamat yang tak ternilai harganya. Namun, seperti halnya komponen lainnya, AC mobil juga memerlukan perawatan agar tetap berfungsi dengan optimal. Berikut ini adalah panduan lengkap tentang cara merawat AC mobil Anda agar tetap dingin dan efisien..</p>
+              <p>Indomontir bengkel mobil profesional yang sudah berpengalaman diberbagai merk mobil kendaraan roda 4. Siap melayani berbagai masalah dan keluhan pada mobil anda, dan kami siap berkunjung ke tempat atau ke lokasi anda.
+ini adalah beberapa layanan kami
+</p>
+<ul>
+  <li>pangilan darurat</li>
+  <li>pergantian aki panggilan</li>
+  <li>service dinamo</li>
+  <li>overhoul ditempat</li>
+  <li>scanning program</li>
+  <li>mmobilizer service</li>
+  <li>dll.</li>
+</ul>
               <a class="elementor-post__read-more" href="blog1.html" aria-label="Read more about 10 Tips Perawatan Mobil yang Penting untuk Mempertahankan Kondisi Optimal">
 			Read More »		</a>
             </div>
           </div>
+          <div style="margin-top: 50px;" class="row">
+          <div class="col-md-6">
+            <img src="assets/img/gallery/4.jpg" alt="Speaker 1" class="img-fluid">
+          </div>
+<div class="col-md-6">
+            <div class="details">
+              <h2>Cerita Sukses Perbaikan Mobil</h2>
+              <div class="social">
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+              </div>
+              <p>Suatu hari, seorang pelanggan menghubungi kepada kami dengan mobil tua yang sudah tidak berjalan selama bertahun-tahun. Mobil ini, sebuah sedan klasik yang telah menjadi bagian dari keluarganya selama beberapa dekade, telah ditinggalkan di garasi karena masalah mesin yang serius. Sang pemilik, Pak Budi, sudah merasa putus asa untuk memperbaiki mobilnya dan hampir memutuskan untuk menjualnya sebagai barang rongsokan.
+</p>
 
-        </div>
+              <a class="elementor-post__read-more" href="blog1.html" aria-label="Read more about 10 Tips Perawatan Mobil yang Penting untuk Mempertahankan Kondisi Optimal">
+			Read More »		</a>
+            </div>
+          </div>
+        </di>
       </div>
 
     </section>
