--- a/galeri.html
+++ b/galeri.html
@@ -30,7 +30,7 @@
 </head>
 
 <body>
-<script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="a33cd178-d31d-4ebf-bdc5-6273eac25377";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
+
   <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
@@ -64,22 +64,22 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="https://wa.wizard.id/f25a5e">Contact</a></li>
+          <li><a class="nav-link scrollto" href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas.">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Wa</a>
+      <a class="buy-tickets scrollto" href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas.">Wa</a>
 
     </div>
   </header><!-- End Header -->
-  <a href="https://wa.wizard.id/f25a5e"><img class="wa" src="assets/img/wa.png" alt=""> </a>
+  <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas."><img class="wa" src="assets/img/wa.png" alt=""> </a>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><br><span>INDOMONTIR</span> </h1>
       <p class="mb-4 pb-0">Service mobil panggilan Jakarta Bekasi Bogor Tangerang.</p>
       <a href="https://www.youtube.com/watch?v=jDDaplaOz7Q" class="glightbox play-btn mb-4"></a>
-      <a href="https://wa.wizard.id/f25a5e" class="about-btn scrollto">konsultasi gratis</a>
+      <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas." class="about-btn scrollto">konsultasi gratis</a>
     </div>
   </section><!-- End Hero Section -->
 
@@ -105,7 +105,7 @@
     <div class="row">
       <div class="col-lg-6">
         <h2 style="font-size: 2rem; font-weight: bold; margin-bottom: 1rem;">Galeri</h2>
-        <p style="font-size: 1.2rem;">Berikut beberapa foto saat kami sedang bekerja.</p>
+        <p style="font-size: 1.2rem;">Kami adalah penyedia layanan bengkel mobil yang siap membantu Anda dengan segala kebutuhan perbaikan dan perawatan kendaraan Anda. Dengan pengalaman bertahun-tahun dalam industri otomotif, kami telah membangun reputasi sebagai mitra terpercaya untuk pemilik kendaraan di seluruh JABODETABEK, kami menerima panggilan dalam kurun waktu 24 jam.</p>
       </div>
     </div>
   </div>
@@ -140,6 +140,38 @@
     height: 100%;
     object-fit: cover;
   }
+  .card-container {
+    display: grid;
+    gap: 10px;
+    margin: 20px 0;
+  }
+
+  .card {
+    width: 100%;
+    height: 100%;
+    border: 1px solid black;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+
+  .card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  @media (max-width: 768px) {
+    .card-container {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+
+  @media (min-width: 769px) {
+    .card-container {
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    }
+  }
+
 </style>
 
 <div class="card-container">
