--- a/galeri.html
+++ b/galeri.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
+ <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
@@ -41,10 +41,9 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-            <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="https://main--tapang.netlify.app//index.html#about">About</a></li>
+                 <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
-          <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
@@ -64,14 +63,14 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas.">Contact</a></li>
+          <li><a class="nav-link scrollto" href="kontak/index.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas.">Wa</a>
+      
 
     </div>
-  </header><!-- End Header -->
+  </header>
   <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas."><img class="wa" src="assets/img/wa.png" alt=""> </a>
   <!-- ======= Hero Section ======= -->
   <section id="hero">
