--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-   <!-- ======= Header ======= -->
+ <!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
@@ -43,7 +42,7 @@
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
                  <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="blog.html">Blog</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">About</a></li>
           <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
           <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
