--- a/blog2.html
+++ b/blog2.html
@@ -31,8 +31,7 @@
 
 <body>
 
-  <!-- ======= Header ======= -->
-  <!-- ======= Header ======= -->
+<!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
@@ -42,12 +41,10 @@
 
       <nav  id="navbar" class="navbar order- order-lg-0">
         <ul>
-    <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
-          <li><a class="nav-link scrollto" href="index.html">About</a></li>
-          <li><a class="nav-link scrollto" href="index.html">Service</a></li>
-          <li><a class="nav-link scrollto" href="blog.html">blog</a></li>
+                 <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
+          <li><a class="nav-link scrollto" href="blog.html">About</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="index.htmls">Layanan</a></li>
+          <li><a class="nav-link scrollto" href="https://webpas.netlify.app/#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -65,15 +62,16 @@
             <li><a href="#">Drop Down 4</a></li>
           </ul>
         </li> -->
-          <li><a class="nav-link scrollto" href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas.">Contact</a></li>
+          <li><a class="nav-link scrollto" href="kontak/index.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
-      <a class="buy-tickets scrollto" href="#buy-tickets">Wa</a>
+      
 
     </div>
-  </header><!-- End Header -->
-    <!-- ======= Hero Section ======= -->
+  </header>
+  <a href="https://wa.me/6289636110795?text=Selamat%20datang%20di%20INDOMONTIR%0AJenis%20mobil:%0AKeluhan:%0ALokasi:%0ATerimakasih,pesan%20anda%20akan%20segera%C2%A0kami%C2%A0balas."><img class="wa" src="assets/img/wa.png" alt=""> </a>
+  <!-- ======= Hero Section ======= -->
   <section id="hero">
     <div class="hero-container" data-aos="zoom-in" data-aos-delay="100">
       <h1 class="mb-4 pb-0"><br><span>INDOMONTIR</span> </h1>
