--- a/index.html
+++ b/index.html
@@ -43,9 +43,8 @@
         <ul>
                  <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="blog.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
+          <li><a class="nav-link scrollto" href="https://webpas.netlify.app/#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -182,13 +181,13 @@
 
       </div>
 
-      <div class="container-fluid venue-gallery-container" data-aos="fade-up" data-aos-delay="100">
+      <div  class="container-fluid venue-gallery-container" data-aos="fade-up" data-aos-delay="100">
         <div class="row g-0">
 
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/1." class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/1.jpg" alt="" class="img-fluid">
+              <a  href="assets/img/1.jpg" class="glightbox" data-gall="venue-gallery">
+                <img src="assets/img/Screenshot 2023-09-24 151215.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -196,7 +195,7 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/2.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/2.jpg" alt="" class="img-fluid">
+                <img src="assets/img/Screenshot 2023-09-24 151239.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
@@ -204,50 +203,12 @@
           <div class="col-lg-3 col-md-4">
             <div class="venue-gallery">
               <a href="assets/img/venue-gallery/3.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/3.jpg" alt="" class="img-fluid">
+                <img src="assets/img/rev.png" alt="" class="img-fluid">
               </a>
             </div>
           </div>
 
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/4.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/4.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/5.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/5.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/6.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/6.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/7.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/7.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
-
-          <div class="col-lg-3 col-md-4">
-            <div class="venue-gallery">
-              <a href="assets/img/venue-gallery/8.jpg" class="glightbox" data-gall="venue-gallery">
-                <img src="assets/img/venue-gallery/8.jpg" alt="" class="img-fluid">
-              </a>
-            </div>
-          </div>
+          
 
         </div>
       </div>
