--- a/blog.html
+++ b/blog.html
@@ -31,7 +31,7 @@
 
 <body>
 
- <!-- ======= Header ======= -->
+<!-- ======= Header ======= -->
   <header id="header" class="d-flex align-items-center ">
     <div class="container-fluid container-xxl d-flex align-items-center">
 
@@ -43,9 +43,8 @@
         <ul>
                  <li><a class="nav-link scrollto active" href="index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="blog.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="galeri.html">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
+          <li><a class="nav-link scrollto" href="https://webpas.netlify.app/#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
@@ -66,7 +65,7 @@
           <li><a class="nav-link scrollto" href="kontak/index.html">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+      </nav><!-- .navbar -->>
       
 
     </div>
