--- a/kontak/index.html
+++ b/kontak/index.html
@@ -42,9 +42,8 @@
         <ul>
           <li><a class="nav-link scrollto active" href="../index.html">Home</a></li>
           <li><a class="nav-link scrollto" href="../blog.html">About</a></li>
-          <li><a class="nav-link scrollto" href="#venue">Service</a></li>
           <li><a class="nav-link scrollto" href="../galeri.html">Gallery</a></li>
-          <li><a class="nav-link scrollto" href="#supporters">Layanan</a></li>
+          <li><a class="nav-link scrollto" href="https://webpas.netlify.app/#supporters">Layanan</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
           <ul>
             <li><a href="#">Drop Down 1</a></li>
