--- a/galeri.html
+++ b/galeri.html
@@ -271,7 +271,7 @@
               jabodetabek 24 JAM 
               <br>
               <strong>Phone:</strong> +62 896-3611-0795<br>
-              <strong>Email:</strong> jarapkerja@gmail.com<br>
+              <strong>Email:</strong> inartuner@gmail.com<br>
             </p>
 
             <div class="social-links">
