--- a/blog2.html
+++ b/blog2.html
@@ -157,7 +157,7 @@ Langkah pertama untuk memanfaatkan layanan Indomontir adalah menghubungi kami. A
               jabodetabek 24 JAM 
               <br>
               <strong>Phone:</strong> +62 896-3611-0795<br>
-              <strong>Email:</strong> jarapkerja@gmail.com<br>
+              <strong>Email:</strong> inartuner@gmail.com<br>
             </p>
 
             <div class="social-links">
