--- a/kontak/index.html
+++ b/kontak/index.html
@@ -176,7 +176,7 @@
     var message = document.getElementById('messageInput').value;
 
     // Construct the WhatsApp URL
-    var whatsappURL = "https://api.whatsapp.com/send?phone=6281286333341&text=" + encodeURIComponent("Name: " + name + "\nContact No: " + contactNo + "\nMessage: " + message);
+    var whatsappURL = "https://api.whatsapp.com/send?phone=6289636110795&text=" + encodeURIComponent("Name: " + name + "\nLokasi: " + contactNo + "\n: " + message);
 
     // Redirect the user to WhatsApp
     window.location.href = whatsappURL;
